# RAG

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: settings.py
docs/: RESULTS.md  ROADMAP.md
experiments/: 初期结果评估记录.md  基线测试结果记录.md  库版本冲突解决流程.md  检索优化BM25结果记录.md
experiments/notebooks/: 初期结果评估记录.md  基线测试结果记录.md  测试结果记录.md
indexing/: vectorstore.py
output/: all_chunks.pkl  eval_result.csv  eval_result_baseline.csv  eval_result_hybird.csv  testset.csv
scripts/: RAG_pipeline.py  TestsetGenerator.py  build_vectorstore.py  evalute.py  hybrid_search_optimize.py  test_chunk_size.py
scripts/test/: test.py  test_embedding.py  test_llm.py
